--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,11 @@
         android:theme="@style/Theme.Lab_2_20210751"
         tools:targetApi="31">
         <activity
+            android:name=".Juego"
+            android:exported="false"
+            android:label="@string/title_activity_juego"
+            android:theme="@style/Theme.Lab_2_20210751" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
