--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,15 +7,16 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="APPSIoT - Lab 2"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Lab_2_20210751"
         tools:targetApi="31">
         <activity
             android:name=".Juego"
+            android:parentActivityName=".MainActivity"
             android:exported="false"
-            android:label="@string/title_activity_juego"
+            android:label="TeleGame"
             android:theme="@style/Theme.Lab_2_20210751" />
         <activity
             android:name=".MainActivity"
