--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,13 @@
         android:theme="@style/Theme.Lab_2_20210751"
         tools:targetApi="31">
         <activity
+            android:name=".Estadisticas"
+            android:exported="false" />
+        <activity
             android:name=".Juego"
-            android:parentActivityName=".MainActivity"
             android:exported="false"
             android:label="TeleGame"
+            android:parentActivityName=".MainActivity"
             android:theme="@style/Theme.Lab_2_20210751" />
         <activity
             android:name=".MainActivity"
